--- a/pubman/pubman_ear/pom.xml
+++ b/pubman/pubman_ear/pom.xml
@@ -316,42 +316,42 @@
                             <artifactId>java_assist</artifactId>
                             <includeInApplicationXml>true</includeInApplicationXml>
                         </jarModule>
-                        						<jarModule>
-							<groupId>xmlbeans.dataacquisition</groupId>
-      						<artifactId>sources</artifactId>
-							<includeInApplicationXml>true</includeInApplicationXml>
-						</jarModule>
-						<jarModule>
-							<groupId>xmlbeans.dataacquisition</groupId>
-      						<artifactId>unapisources</artifactId>
-							<includeInApplicationXml>true</includeInApplicationXml>
-						</jarModule>
-						<jarModule>
-							<groupId>xmlbeans.dataacquisition</groupId>
-      						<artifactId>unapiformats</artifactId>
-							<includeInApplicationXml>true</includeInApplicationXml>
-						</jarModule>
-						<jarModule>
-							<groupId>sword</groupId>
-      						<artifactId>swordcommon</artifactId>
-							<includeInApplicationXml>true</includeInApplicationXml>
-						</jarModule>
-						<jarModule>
-							<groupId>sword</groupId>
-      						<artifactId>xom</artifactId>
-							<includeInApplicationXml>true</includeInApplicationXml>
-						</jarModule>
-						<jarModule>
-							<groupId>commons-fileupload</groupId>
-      						<artifactId>commons-fileupload</artifactId>
-							<includeInApplicationXml>true</includeInApplicationXml>
-						</jarModule>
-						<jarModule>
-							<groupId>commons-io</groupId>
-      						<artifactId>commons-io</artifactId>
-							<includeInApplicationXml>true</includeInApplicationXml>
-						</jarModule>
-                        <jarModule>         
+                        <jarModule>
+                            <groupId>xmlbeans.dataacquisition</groupId>
+                            <artifactId>sources</artifactId>
+                            <includeInApplicationXml>true</includeInApplicationXml>
+                        </jarModule>
+                        <jarModule>
+                            <groupId>xmlbeans.dataacquisition</groupId>
+                            <artifactId>unapisources</artifactId>
+                            <includeInApplicationXml>true</includeInApplicationXml>
+                        </jarModule>
+                        <jarModule>
+                            <groupId>xmlbeans.dataacquisition</groupId>
+                            <artifactId>unapiformats</artifactId>
+                            <includeInApplicationXml>true</includeInApplicationXml>
+                        </jarModule>
+                        <jarModule>
+                            <groupId>sword</groupId>
+                            <artifactId>swordcommon</artifactId>
+                            <includeInApplicationXml>true</includeInApplicationXml>
+                        </jarModule>
+                        <jarModule>
+                            <groupId>sword</groupId>
+                            <artifactId>xom</artifactId>
+                            <includeInApplicationXml>true</includeInApplicationXml>
+                        </jarModule>
+                        <jarModule>
+                            <groupId>commons-fileupload</groupId>
+                            <artifactId>commons-fileupload</artifactId>
+                            <includeInApplicationXml>true</includeInApplicationXml>
+                        </jarModule>
+                        <jarModule>
+                            <groupId>commons-io</groupId>
+                            <artifactId>commons-io</artifactId>
+                            <includeInApplicationXml>true</includeInApplicationXml>
+                        </jarModule>
+                        <jarModule>
                             <groupId>com.maxmind.geoip</groupId>
                             <artifactId>geoip</artifactId>
                             <includeInApplicationXml>true</includeInApplicationXml>
@@ -486,9 +486,9 @@
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>cone_presentation</artifactId>
             <version>1.0.27</version>
-			<scope>compile</scope>
-			<type>war</type>
-		</dependency>
+            <scope>compile</scope>
+            <type>war</type>
+        </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>dataacquisition_presentation</artifactId>
@@ -734,48 +734,48 @@
             <version>1.0-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
-    	<dependency>
-			<groupId>xmlbeans.dataacquisition</groupId>
-			<artifactId>sources</artifactId>
-			<version>1.1</version>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>xmlbeans.dataacquisition</groupId>
-			<artifactId>unapisources</artifactId>
-			<version>1.1</version>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>xmlbeans.dataacquisition</groupId>
-			<artifactId>unapiformats</artifactId>
-			<version>1.1</version>
-			<scope>compile</scope>
-		</dependency>
-    	<dependency>
-      		<groupId>sword</groupId>
-      		<artifactId>swordcommon</artifactId>
-      		<version>1.0</version>
-      		<scope>compile</scope>		
-    	</dependency>
-    	<dependency>
-      		<groupId>sword</groupId>
-      		<artifactId>xom</artifactId>
-      		<version>1.2.1</version>
-      		<scope>compile</scope>
-    	</dependency>
-    	<dependency>
-	    	<groupId>commons-fileupload</groupId>
-	    	<artifactId>commons-fileupload</artifactId>
-	    	<version>1.2</version>
-	    	<scope>compile</scope>
-	    </dependency>
-	    <dependency>
-	    	<groupId>commons-io</groupId>
-	    	<artifactId>commons-io</artifactId>
-	    	<version>1.4</version>
-	    	<scope>compile</scope>
-	    </dependency>
+        <dependency>
+            <groupId>xmlbeans.dataacquisition</groupId>
+            <artifactId>sources</artifactId>
+            <version>1.1</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>xmlbeans.dataacquisition</groupId>
+            <artifactId>unapisources</artifactId>
+            <version>1.1</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>xmlbeans.dataacquisition</groupId>
+            <artifactId>unapiformats</artifactId>
+            <version>1.1</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>sword</groupId>
+            <artifactId>swordcommon</artifactId>
+            <version>1.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>sword</groupId>
+            <artifactId>xom</artifactId>
+            <version>1.2.1</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.2</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.4</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <profiles>
@@ -837,9 +837,12 @@
                                         </copy>
 
                                         <!-- configuration for the runtime server jboss server -->
-                                        <!--<xslt processor="trax" in="${jboss.install.dir}/server/default/deploy/properties-service.xml" style="${project.build.directory}/classes/properties-service-transform.xsl" out="${project.build.directory}/properties-service.temp" />
-                                        <copy overwrite="true" file="${project.build.directory}/properties-service.temp" toFile="${jboss.install.dir}/server/default/deploy/properties-service.xml">
-                                        </copy>-->
+                                        <!--
+                                            <xslt processor="trax" in="${jboss.install.dir}/server/default/deploy/properties-service.xml"
+                                            style="${project.build.directory}/classes/properties-service-transform.xsl" out="${project.build.directory}/properties-service.temp" />
+                                            <copy overwrite="true" file="${project.build.directory}/properties-service.temp"
+                                            toFile="${jboss.install.dir}/server/default/deploy/properties-service.xml"> </copy>
+                                        -->
 
                                     </tasks>
                                 </configuration>
@@ -912,8 +915,14 @@
                                         <taskdef resource="selenium-ant.properties">
                                             <classpath refid="maven.plugin.classpath" />
                                         </taskdef>
-<!--                                        <selenese suite="src/test/resources/selenium/TestSuite.html" browser="*chrome /usr/lib/firefox/firefox-2-bin" timeoutInSeconds="180" port="5555" results="${project.build.directory}/selenium-firefox-results.html" startURL="http://localhost:${cargo.port}" />-->
-<!--                                        <selenese suite="src/test/resources/selenium/TestSuite.html" browser="*chrome /usr/lib/firefox-3.5.3/firefox-3.5" timeoutInSeconds="180" port="4445" results="${project.build.directory}/selenium-firefox-results.html" startURL="http://localhost:${cargo.port}" />-->
+                                        <!--
+                                            <selenese suite="src/test/resources/selenium/TestSuite.html" browser="*chrome /usr/lib/firefox/firefox-2-bin" timeoutInSeconds="180"
+                                            port="5555" results="${project.build.directory}/selenium-firefox-results.html" startURL="http://localhost:${cargo.port}" />
+                                        -->
+                                        <!--
+                                            <selenese suite="src/test/resources/selenium/TestSuite.html" browser="*chrome /usr/lib/firefox-3.5.3/firefox-3.5" timeoutInSeconds="180"
+                                            port="4445" results="${project.build.directory}/selenium-firefox-results.html" startURL="http://localhost:${cargo.port}" />
+                                        -->
                                     </tasks>
                                 </configuration>
                                 <goals>
@@ -955,6 +964,18 @@
                         </executions>
                     </plugin>
                     <plugin>
+                        <artifactId>maven-resources-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>resources-gui</id>
+                                <phase>integration-test</phase>
+                                <goals>
+                                    <goal>testResources</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <executions>
                             <execution>
@@ -969,7 +990,7 @@
                                         <exclude>none</exclude>
                                     </excludes>
                                     <includes>
-                                        <include>**/selenium/*</include>
+                                        <include>**/de/mpg/escidoc/pubman/test/gui/*Test.java</include>
                                     </includes>
                                 </configuration>
                             </execution>
