--- a/pubman/pubman_ear/pom.xml
+++ b/pubman/pubman_ear/pom.xml
@@ -2,19 +2,19 @@
     <parent>
         <artifactId>pubman</artifactId>
         <groupId>de.mpg.escidoc.pubman</groupId>
-        <version>5.0.10-SNAPSHOT</version>
+        <version>5.0.10</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>de.mpg.escidoc.pubman</groupId>
     <artifactId>pubman_ear</artifactId>
     <name>pubman_ear</name>
     <packaging>ear</packaging>
-    <version>5.0.10-SNAPSHOT</version>
+    <version>5.0.10</version>
 
     <scm>
-        <connection>scm:svn:https://zim02.gwdg.de/repos/pubman/trunk/pubman/pubman_ear</connection>
-        <developerConnection>scm:svn:https://zim02.gwdg.de/repos/pubman/trunk/pubman/pubman_ear</developerConnection>
-        <url>https://zim02.gwdg.de/repos/common/</url>
+        <connection>scm:svn:https://zim02.gwdg.de/repos/pubman/tags/pubman-5.0.10/pubman_ear</connection>
+        <developerConnection>scm:svn:https://zim02.gwdg.de/repos/pubman/tags/pubman-5.0.10/pubman_ear</developerConnection>
+        <url>https://zim02.gwdg.de/repos/common/tags/pubman-5.0.10/pubman_ear</url>
     </scm>
 
     <build>
@@ -533,14 +533,14 @@
         <dependency>
             <groupId>de.mpg.escidoc.pubman</groupId>
             <artifactId>pubman_logic</artifactId>
-            <version>5.0.10-SNAPSHOT</version>
+            <version>5.0.10</version>
             <scope>compile</scope>
             <type>ejb</type>
         </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.pubman</groupId>
             <artifactId>pubman_presentation</artifactId>
-            <version>5.0.10-SNAPSHOT</version>
+            <version>5.0.10</version>
             <scope>compile</scope>
             <type>war</type>
         </dependency>
@@ -838,10 +838,8 @@
 
                                         <!-- configuration for the runtime server jboss server -->
                                         <!--
-                                            <xslt processor="trax" in="${jboss.install.dir}/server/default/deploy/properties-service.xml"
-                                            style="${project.build.directory}/classes/properties-service-transform.xsl" out="${project.build.directory}/properties-service.temp" />
-                                            <copy overwrite="true" file="${project.build.directory}/properties-service.temp"
-                                            toFile="${jboss.install.dir}/server/default/deploy/properties-service.xml"> </copy>
+                                            <xslt processor="trax" in="${jboss.install.dir}/server/default/deploy/properties-service.xml" style="${project.build.directory}/classes/properties-service-transform.xsl" out="${project.build.directory}/properties-service.temp" />
+                                            <copy overwrite="true" file="${project.build.directory}/properties-service.temp" toFile="${jboss.install.dir}/server/default/deploy/properties-service.xml"> </copy>
                                         -->
 
                                     </tasks>
@@ -916,12 +914,10 @@
                                             <classpath refid="maven.plugin.classpath" />
                                         </taskdef>
                                         <!--
-                                            <selenese suite="src/test/resources/selenium/TestSuite.html" browser="*chrome /usr/lib/firefox/firefox-2-bin" timeoutInSeconds="180"
-                                            port="5555" results="${project.build.directory}/selenium-firefox-results.html" startURL="http://localhost:${cargo.port}" />
+                                            <selenese suite="src/test/resources/selenium/TestSuite.html" browser="*chrome /usr/lib/firefox/firefox-2-bin" timeoutInSeconds="180" port="5555" results="${project.build.directory}/selenium-firefox-results.html" startURL="http://localhost:${cargo.port}" />
                                         -->
                                         <!--
-                                            <selenese suite="src/test/resources/selenium/TestSuite.html" browser="*chrome /usr/lib/firefox-3.5.3/firefox-3.5" timeoutInSeconds="180"
-                                            port="4445" results="${project.build.directory}/selenium-firefox-results.html" startURL="http://localhost:${cargo.port}" />
+                                            <selenese suite="src/test/resources/selenium/TestSuite.html" browser="*chrome /usr/lib/firefox-3.5.3/firefox-3.5" timeoutInSeconds="180" port="4445" results="${project.build.directory}/selenium-firefox-results.html" startURL="http://localhost:${cargo.port}" />
                                         -->
                                     </tasks>
                                 </configuration>
