--- a/common_services/citationmanager/pom.xml
+++ b/common_services/citationmanager/pom.xml
@@ -238,5 +238,18 @@
 			<version>3.5.0</version>
 <!--			<version>2.0.1</version>-->
 		</dependency>
+		<dependency>
+			<groupId>de.mpg.escidoc.services</groupId>
+			<artifactId>transformation</artifactId>
+			<version>1.0.20-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>de.mpg.escidoc.services</groupId>
+			<artifactId>common_logic</artifactId>
+			<version>1.1.32-SNAPSHOT</version>
+			<scope>compile</scope>
+			<type>ejb</type>
+		</dependency>
 	</dependencies>
 </project>
