--- a/pubman/pubman_installer/pom.xml
+++ b/pubman/pubman_installer/pom.xml
@@ -194,6 +194,18 @@
             <version>8.3-604.jdbc3</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>de.mpg.escidoc.services</groupId>
+            <artifactId>cone</artifactId>
+            <version>1.1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+			<groupId>de.mpg.escidoc.services</groupId>
+			<artifactId>common_logic</artifactId>
+			<version>1.1.34-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
 
     </dependencies>
 </project>
