--- a/common_services/transformation/src/main/resources/transformation.properties
+++ b/common_services/transformation/src/main/resources/transformation.properties
@@ -1,5 +1,5 @@
 # eSciDoc-ObjId of the external Organisation
-escidoc.pubman.external.organisation.id=escidoc:persistent22
+escidoc.pubman.external.organisation.id=${escidoc.pubman.external.organisation.id}
 escidoc.framework_access.content-model.id.publication=${escidoc.framework_access.content-model.id.publication}
 # CoNE service URL
 escidoc.cone.service.url=${escidoc.cone.service.url}
