--- a/common_services/fao_ingestion/pom.xml
+++ b/common_services/fao_ingestion/pom.xml
@@ -72,7 +72,7 @@
 		<dependency>
 			<groupId>com.hp.hpl.jena</groupId>
 			<artifactId>jena</artifactId>
-			<version>2.5.7</version>
+			<version>2.6.2</version>
 		</dependency>
 		<dependency>
 			<groupId>xmlbeans</groupId>
@@ -125,12 +125,22 @@
     <dependency>
     	<groupId>org.fao.oa.ingestion</groupId>
     	<artifactId>fao_datastreams</artifactId>
-    	<version>1.0.1</version>
+    	<version>1.0.2</version>
     </dependency>
     <dependency>
     	<groupId>org.fao.oa.ingestion</groupId>
     	<artifactId>fao_uris</artifactId>
     	<version>1.0.0</version>
+    </dependency>
+    <dependency>
+    	<groupId>com.hp.hpl.jena</groupId>
+    	<artifactId>arq</artifactId>
+    	<version>2.8.2</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.mulgara</groupId>
+    	<artifactId>querylang</artifactId>
+    	<version>2.1.6</version>
     </dependency>
   </dependencies>
 </project>
