--- a/common_services/exportmanager/pom.xml
+++ b/common_services/exportmanager/pom.xml
@@ -78,5 +78,20 @@
 			<version>2.7.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>de.mpg.escidoc.services</groupId>
+			<artifactId>framework_access</artifactId>
+			<version>1.0.37-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>jetty</groupId>
+			<artifactId>javax.servlet</artifactId>
+			<version>5.1.12</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-httpclient</groupId>
+			<artifactId>commons-httpclient</artifactId>
+			<version>3.1</version>
+		</dependency>
 	</dependencies>
 </project>
