--- a/common_services/exportmanager/src/test/resources/pubman.properties
+++ b/common_services/exportmanager/src/test/resources/pubman.properties
@@ -1,5 +1,5 @@
 # URL of the FIZ framework instance (faces: https://escidoc1.escidoc.mpg.de/index.php/FIZ_Framework)
-escidoc.framework_access.framework.url=${escidoc.common.framework.url}
+escidoc.framework_access.framework.url=${escidoc.framework_access.framework.url}
 
 # Identifier of the content type "publication" in the actual framework instance
 escidoc.framework_access.content-model.id.publication=${escidoc.framework_access.content-model.id.publication}
@@ -12,3 +12,15 @@ xsd.soap.item.components=${xsd.soap.item.components}
 
 # Metadata schema
 xsd.soap.common.mdrecords=${xsd.soap.common.mdrecords}
+
+#file NS
+xsd.metadata.file=${xsd.metadata.file}
+
+#dcterms NS
+xsd.metadata.dcterms=${xsd.metadata.dcterms}
+
+#dc NS
+xsd.metadata.dc=${xsd.metadata.dc}
+
+#properties NS
+xsd.soap.common.prop=${xsd.soap.common.prop}
